# smartbanking

./: .cnb.yml  .env.example  .gitignore  .~lock.【ai编程工具】知识码.png#  AI开发环境配置讲义_中文版.tex  CNB项目同步教程.md  Makefile  README.md  aapl_analysis.py  mcp.json  mino  pyproject.toml  references.bib  skills-lock.json  test-cicd.sh  wrangler.toml  智慧银行实验教程.tex  智慧银行实验讲义_v3.0.tex
.agents/skills/openbb-finance/: examples.md  reference.md
.github/workflows/: build-pdf.yml  deploy-pages.yml  deploy-web.yml  test-skills.yml  validate-skills.yml
chapters/: ch01.tex  ch02.tex  ch03.tex  ch04.tex  ch05.tex  ch06.tex  ch07.tex  ch08.tex  ch09.tex  ch10.tex  ch11.tex  ch12.tex
docs/: CI-CD-README.md  CNB-CICD-README.md  cloudflare-pages-deploy.md
qoder-skills-library/: .gitignore  .mcp.json  CLAUDE.md  README.md  mcp_config.json
qoder-skills-library/01-ideation/idea-creator/: SKILL.md
qoder-skills-library/01-ideation/idea-discovery/: SKILL.md
qoder-skills-library/01-ideation/idea-discovery-robot/: SKILL.md
qoder-skills-library/01-ideation/lin-yifu-perspective/: SKILL.md  四川粮食生产形势分析.md
qoder-skills-library/01-ideation/novelty-check/: SKILL.md
qoder-skills-library/02-literature/academic-literature-guide/: README.md  SKILL.md
qoder-skills-library/02-literature/academic-paper-analysis/: SKILL.md
qoder-skills-library/02-literature/academic-researcher/: SKILL.md
qoder-skills-library/02-literature/arxiv/: SKILL.md
qoder-skills-library/02-literature/comm-lit-review/: SKILL.md
qoder-skills-library/02-literature/literature-toolkit/: SKILL.md  __init__.py  analyzer.py  cli.py  parsers.py  zhizhen_search.py
qoder-skills-library/02-literature/paper-finder-research/: CHANGELOG.md  EXAMPLES.md  LICENSE  QUICKSTART.md  README.md  SKILL.md
qoder-skills-library/02-literature/research-lit/: SKILL.md
qoder-skills-library/02-literature/systematic-literature-review/: CHANGELOG.md  README.md  SKILL.md  config.yaml  requirements.txt
qoder-skills-library/03-theory/formula-derivation/: SKILL.md
qoder-skills-library/03-theory/latex-econ-model/: SKILL.md
qoder-skills-library/03-theory/make_latex_model/: README.md  SKILL.md  config.yaml
qoder-skills-library/03-theory/proof-writer/: SKILL.md
qoder-skills-library/04-data/api-data-fetcher/: SKILL.md
qoder-skills-library/04-data/questionnaire-design/: SKILL.md  sample_questionnaire_Ghana_Rice_Farmers.docx  样例_雅安茶农调研_抽样与全流程说明.docx  样例_雅安茶农调研_抽样与全流程说明.md  样例_雅安茶农调研问卷_v1.0.docx
qoder-skills-library/04-data/stata-data-cleaning/: SKILL.md
qoder-skills-library/05-analysis/abm-toolkit/: LICENSE  README.md  SKILL.md  test-prompts.json
qoder-skills-library/05-analysis/analyze-results/: SKILL.md
qoder-skills-library/17-ima/: SKILL.md
qoder-skills-library/meta/: _index.yaml
reports/: bank_sentiment_weekly.md  credit_risk_hengda.md
scripts/: README.md  com.smartbanking.refresh-edgeone-url.plist  deploy-with-seo.sh  latest_url_expire.txt  push-to-google.sh  refresh-edgeone-url.sh  refresh.err
webversion/: .gitignore  .npmrc  astro.config.mjs  bundle.html  bundle_html.py  convert_latex_to_web.py  demo.html  fix_block_math.py  fix_codeblocks.py  fix_indented.py  fix_latex_residual.py  fix_tables.py  package.json  pnpm-lock.yaml  process_md.py
webversion/.edgeone/: project.json
webversion/.vercel/: project.json
webversion/public/: .nojekyll  latest-url.json  latest-url.txt  robots.txt
实验讲义 /: BMAD-CRM系统开发实验手册.md  mcp.json  实验详细步骤 BMAD代码云端部署.txt  实验详细步骤 BMAD方法论实战.txt  实验详细步骤 CNB流水线自动部署到EdgeOne.md  实验详细步骤 CNB流水线自动部署到Vercel.md  实验详细步骤 使用cnm同步项目库.txt  智慧银行实验讲义_v4.0.tex  本地大模型部署指南.md
智慧银行实验教程chapters/: MCP服务配置参考手册.md  appendix.tex  ch01.tex  ch02.tex  ch03.tex  ch04.tex  ch05.tex  ch06.tex  ch06_comprehensive.tex  ch07.tex  ch08.tex  ch09.tex  ch10.tex  ch11.tex  ch12.tex  ch13.tex  preface.tex  智慧银行实验教程.tex
(+703 files in other folders)
