[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartbanking"
version = "6.0.0"
description = "智慧银行实验教程——AI驱动的金融科技实践"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "四川农业大学经济学院 · 数字经济系", email = "xiaosicau@qq.com"},
]
keywords = ["smartbanking", "fintech", "ai", "education", "qoder"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
# 基础依赖
base = [
    "pyyaml>=6.0",
    "requests>=2.31",
    "python-dotenv>=1.0.0",
]

# 金融分析
finance = [
    "feedparser>=6.0.11",
    "yfinance",
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
]

# 文献综述
literature = [
    "pyyaml>=6.0",
    "requests>=2.31",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
]

# 数据分析
analysis = [
    "mesa>=3.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "seaborn>=0.12",
]

# 统计分析
statistics = [
    "scipy>=1.11",
    "statsmodels>=0.14",
    "pingouin>=0.5",
]

# 机器学习
machine-learning = [
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "lightgbm>=4.0",
]

# 自然语言处理
nlp = [
    "transformers>=4.35",
    "torch>=2.0",
    "sentence-transformers>=2.2",
]

# 文档处理
documents = [
    "python-docx>=0.8.11",
    "openpyxl>=3.1.2",
    "reportlab>=4.0",
]

# 网络爬虫
web-scraping = [
    "beautifulsoup4>=4.12",
    "scrapy>=2.11",
    "selenium>=4.15",
]

# 测试
test = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "pytest-xdist>=3.5",
]

# 开发
dev = [
    "black>=23.12",
    "ruff>=0.1.8",
    "mypy>=1.8",
    "pre-commit>=3.6",
]

# 文档
docs = [
    "sphinx>=7.2",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=2.0",
]

# 全部依赖
all = [
    "smartbanking[base,finance,literature,analysis,statistics,machine-learning,nlp,documents,web-scraping,test,dev,docs]",
]

[project.urls]
Homepage = "https://cnb.cool/xiaosicau/smartbanking"
Repository = "https://cnb.cool/xiaosicau/smartbanking"
Documentation = "https://smartbanking.vercel.app"
Issues = "https://cnb.cool/xiaosicau/smartbanking/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["qoder-skills-library*", ".agents*"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "YTT", "ANN", "ASYNC", "S", "BLE", "FBT", "A", "COM", "C4", "DTZ", "T10", "EM", "FA", "ISC", "ICN", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "TD", "FIX", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "PERF", "FURB", "LOG", "G"]
ignore = ["E501", "S101", "ANN101", "ANN102"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]
markers = [
    "slow: 标记为慢速测试",
    "integration: 集成测试",
    "e2e: 端到端测试",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
